tests/errors/operators/fstring_limit.sad
# Test f-string interpolation overflow protection
val = 1 << 20000
s = $"val is {val}"
show(s)
